
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;
 int C ;
 int D ;
 int I ;
 int L ;
 int S ;
 int c ;
 int d ;
 int f ;
 int i ;
 int l ;
 int printf (char*,int,int,int,int ,int ,int ,int ,int ,int ,int ,int ) ;
 int s ;

void print(void) {
 printf("%d %d %d %ld %u %u %u %lu %f %f %lf\n",c,s,i,l,C,S,I,L,f,d,D);
}
